fix: button hover background clipping

--- a/src/components/Button/button.module.scss
+++ b/src/components/Button/button.module.scss
@@ -15,7 +15,7 @@
     border-radius: 0.5rem;
     box-shadow: 0 0 0.3rem var(--primary-dark);
     color: var(--fg-1);
-    background-size: 220%;
+    background-size: 250%;
     border: 2px solid var(--primary-dark);
     background-color: transparent;
     background-image: linear-gradient(120deg, transparent 0%, transparent 50%, var(--primary-dark) 50%);
