--- a/src/components/Footer/footer.module.scss
+++ b/src/components/Footer/footer.module.scss
@@ -18,8 +18,8 @@
 
         svg {
             position: relative;
-            top: .3rem;
-            margin: 0 .4rem;
+            top: 0.3rem;
+            margin: 0 0.4rem;
             font-size: 1.8rem;
             color: var(--primary-light);
         }
