--- a/src/components/Nav/navbar.module.scss
+++ b/src/components/Nav/navbar.module.scss
@@ -8,10 +8,6 @@
     width: 100%;
     top: 0;
     left: 0;
-    background: rgba(var(--bg-2), 0.1);
-    backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(5px);
-    box-shadow: 2px 0 var(--bg-1);
     z-index: 1000;
     transition: all 0.3s;
 
@@ -82,7 +78,7 @@
             display: inline-block;
             background-image: linear-gradient(to bottom right, var(--primary-light), var(--primary-dark));
             position: relative;
-            top: .8rem; //fixes offset
+            top: 0.8rem; //fixes offset
             transition: all 0.2s;
             cursor: pointer;
 
